# Parallel-RANSAC

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CMakeLists.txt~  matrix.cpp  matrix.h~  myintegralimagenormalestimation.cpp  myintegralimagenormalestimation.h  normal.cpp  segment.cpp  segment.h  types.h  util.cpp  util.h
src/egbis/: CMakeLists.txt  CMakeLists.txt~  filter.h  segment-image.h
src/myRansac/: CMakeLists.txt  ParallelRansac.cpp  ParallelRansac.h  kernel.cu  typesCuda.h
